moved to week-1 folder, updated code attribution

--- a/week-1/ts-examples/package.json
+++ b/week-1/ts-examples/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "person-class": "tsc && node dist/person.class.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jeff Lintel",
